jv/crates/jv_codegen_java/src/tests/snapshots/jv_codegen_java__tests__pattern_switch__pattern_example1_type_patterns.snap
---
source: crates/jv_codegen_java/src/tests/pattern_switch.rs
expression: combined
---
// ---- Java 25 ----
package patterns;

public class Example1 {
    public static int evaluate(Object x) {
        return // strategy=Switch arms=3 guards=0 default=true exhaustive=false
        switch (x) {
            case String value -> value.length();
            case Integer value -> value * 2;
            default -> 0;
        }
        ;
    }
    
}

// ---- Java 21 ----
package patterns;

public class Example1 {
    public static int evaluate(Object x) {
        return // strategy=Switch arms=3 guards=0 default=true exhaustive=false
        new Object() {
            int matchExpr() {
                final var __subject = x;
                int __matchResult = 0;
                boolean __matched = false;
                if (!__matched) {
                    if (__subject instanceof String value) {
                        __matchResult = value.length();
                        __matched = true;
                    }
                }
                if (!__matched) {
                    if (__subject instanceof Integer value) {
                        __matchResult = value * 2;
                        __matched = true;
                    }
                }
                if (!__matched) {
                    __matchResult = 0;
                    __matched = true;
                }
                return __matchResult;
            }
        }.matchExpr()
        ;
    }
    
}
