jv/crates/jv_codegen_java/src/tests/snapshots/jv_codegen_java__tests__pattern_switch__pattern_example5_destructuring_patterns.snap
---
source: crates/jv_codegen_java/src/tests/pattern_switch.rs
assertion_line: 25
expression: combined
---
// ---- Java 25 ----
package patterns;

public record Inner(int x, int y) {}

public record Outer(Inner inner, int count) {}

public class Example5 {
    public static int total(Outer value) {
        return // strategy=Switch arms=2 guards=0 default=true exhaustive=true
        switch (value) {
            case Outer(Inner(var x, var y), var count) -> x + y + count;
            default -> 0;
        }
        ;
    }
    
}

// ---- Java 21 ----
package patterns;

public record Inner(int x, int y) {}

public record Outer(Inner inner, int count) {}

public class Example5 {
    public static int total(Outer value) {
        return // strategy=Switch arms=2 guards=0 default=true exhaustive=true
        new Object() {
            int matchExpr() {
                final var __subject = value;
                int __matchResult = 0;
                boolean __matched = false;
                if (!__matched) {
                    do {
                        if (!(__subject instanceof Outer(Inner(var x, var y), var count) outer)) {
                            break;
                        }
                        __matched = true;
                        __matchResult = x + y + count;
                        break;
                    } while (false);
                }
                if (!__matched) {
                    __matchResult = 0;
                    __matched = true;
                }
                return __matchResult;
            }
        }.matchExpr()
        ;
    }
    
}
