jv/crates/jv_codegen_java/src/tests/snapshots/jv_codegen_java__tests__pattern_switch__pattern_example5_java21_fallback_depth2.snap
---
source: crates/jv_codegen_java/src/tests/pattern_switch.rs
assertion_line: 31
expression: content
---
// Java 21 fallback handles nested destructuring via instanceof loop and do-while guard
// Generated by jv (ターゲット: Java 21)
// 自動生成ファイル - このファイルへの手動変更は上書きされます。

package patterns;

public record Inner(int x, int y) {}

public record Outer(Inner inner, int count) {}

public class Example5 {
    public static int total(Outer value) {
        return // strategy=Switch arms=2 guards=0 default=true exhaustive=true
        new Object() {
            int matchExpr() {
                final var __subject = value;
                int __matchResult = 0;
                boolean __matched = false;
                if (!__matched) {
                    do {
                        if (!(__subject instanceof Outer(Inner(var x, var y), var count) outer)) {
                            break;
                        }
                        __matched = true;
                        __matchResult = x + y + count;
                        break;
                    } while (false);
                }
                if (!__matched) {
                    __matchResult = 0;
                    __matched = true;
                }
                return __matchResult;
            }
        }.matchExpr()
        ;
    }
    
}
